--- a/frontend/src/components/services/Services.css
+++ b/frontend/src/components/services/Services.css
@@ -8,6 +8,13 @@
   font-weight: 400;
   font-style: normal;
 }
+
+.services_text_selected {
+  font-family: 'Bangers', system-ui;
+  font-weight: 400;
+  font-style: normal;
+  color: #ff8c5f;
+}
 .dis_none {
   display: none;
 }
