--- a/frontend/src/components/hometwo/Hometwo.css
+++ b/frontend/src/components/hometwo/Hometwo.css
@@ -161,7 +161,6 @@ img {
 }
 #cslider {
   height: 100%;
-
   top: 0;
   left: 0;
   transform: skew(0deg, 21deg);
@@ -185,7 +184,28 @@ img {
   box-shadow: 100px 50px 300px 100px rgba(255, 139, 22, 0.5);
   animation: animate_lights 5s infinite alternate forwards ease;
 }
-
+#peoplewalk {
+  position: fixed;
+  bottom: -8%;
+  left: -20%;
+  z-index: 9;
+  width: 35%;
+  height: 40%;
+  transform: skew(0deg, -4deg) rotateY(230deg);
+  opacity: 0.9;
+}
+#clientele_head {
+  cursor: pointer;
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+  position: fixed;
+  top: 46%;
+  left: 34.1%;
+  width: 20%;
+  height: 14.1%;
+  background-color: rgba(255, 0, 0, 0);
+  z-index: 9;
+  opacity: 0.5;
+}
 @keyframes animate_lights {
   0%,
   18%,
